# solana-foundation-demo

./: Anchor.toml  anti-regression-types.rs  demo.md  txtx.yml
programs/goodbye_cruel_world/: Cargo.toml
programs/goodbye_cruel_world/src/: lib.rs
programs/hello_again_world/: Cargo.toml
programs/hello_again_world/src/: lib.rs
programs/hello_world/: Cargo.toml
programs/hello_world/src/: lib.rs
runbooks/: README.md  call.tx  squads.tx  subgraph.tx
runbooks/deployment/: main.tx  signers.mainnet.tx  signers.testnet.tx
