[package]
name = "hello_world"
version = "0.1.0"
description = "Created with meeee"
edition = "2021"
authors = ["Meeeeeeee"]

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
autocfg = "1.1.0"
hashbrown = "0.14"
once_cell = "1.19"
unicode-ident = "1.0"
